# aws-incident-copilot

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COST.md  FEATURES.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READY.md  QUICKSTART.md  QUICKSTART_WEB.md  README.md  SECURITY.md  USER_AUTHENTICATION.md  VERCEL_DEPLOYMENT.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: mock-incidents.py  scan.py  test-aws.py
app/: globals.css  layout.tsx  page.tsx  types.ts
app/api/update-credentials/: route.ts
app/login/: page.tsx
app/settings/: page.tsx
copilot/: alerts.py  cli.py  config.py  evidence.py  setup.py
copilot/Incidents/: __init__.py
copilot/copilot/: cli.py
copilot/data/mock/: ec2-cpu-spike.json  s3-access-denied.json
copilot/detectors/: __init__.py
copilot/incidents/: __init__.py
copilot/sources/: __init__.py  cloudtrail.py  cloudwatch.py  mock.py
lib/: auth.ts
tests/: test_cli.py  test_cloudwatch.py  test_config.py  test_detectors.py  test_incidents.py
