[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aws-incident-copilot"
version = "0.1.0"
description = "CLI that diagnoses/simulates fixes and packages evidence for common AWS incidents (mock-first)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Javier Hernandez Vantuyl" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.scripts]
copilot = "copilot.cli:app"
