[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aws-incident-copilot"
version = "0.1.0"
description = "CLI that diagnoses/simulates fixes and packages evidence for common AWS incidents (mock-first)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Javier Hernandez Vantuyl" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "boto3>=1.35.0",
  "pydantic-settings>=2.0.0"
]

[project.scripts]
copilot = "copilot.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "black>=24.8.0",
  "moto[cloudwatch,cloudtrail,sns,s3,ec2]>=5.0.0",
  "pytest-cov>=4.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["copilot"]

[tool.hatch.build.targets.sdist]
include = ["copilot", "README.md", "LICENSE", "pyproject.toml"]